--- a/Warehouse/Warehouse/Warehouse.csproj
+++ b/Warehouse/Warehouse/Warehouse.csproj
@@ -298,6 +298,7 @@
     <Content Include="Views\Supplier\Index.cshtml" />
     <Content Include="Views\Supplier\Add.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
+    <Content Include="Views\Invoice\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
