--- a/Warehouse/Warehouse/Warehouse.csproj
+++ b/Warehouse/Warehouse/Warehouse.csproj
@@ -308,6 +308,9 @@
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Invoice\Index.cshtml" />
     <Content Include="Views\Product\Add.cshtml" />
+    <Content Include="Views\Invoice\Add.cshtml" />
+    <Content Include="Views\Invoice\Delete.cshtml" />
+    <Content Include="Views\Invoice\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
